--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Admins/Admins.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Admins/Admins.module.css
@@ -1,48 +1,52 @@
-.cardsContainer {
-	list-style: none;
+.adminContainer {
+	width: 100%;
+	height: 100%;
 	display: grid;
-	padding: 10px 5px;
 	grid-template-columns: repeat(6, 1fr);
-	gap: 3rem 1rem;
+	gap: 1rem;
 }
-.list {
-	position: relative;
-}
-.priceChangeHeader {
-	font-weight: 500;
-}
-.list:hover .dots {
-	opacity: 1;
+.adminContainerHeader {
+	font-weight: 400;
+	font-size: 2rem;
+	margin-bottom: 1rem;
 }
 
-@media only screen and (hover: none) {
-	.dots {
-		opacity: 1;
-	}
+.paginationContainer {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	margin-top: 3rem;
+	margin-bottom: 3rem;
+}
+
+.IconContainer {
+	display: flex;
+	align-items: center;
+}
+
+.reportIcon {
+	width: 1rem;
+	height: 1rem;
+	margin-right: 0.5rem;
 }
 
 @media only screen and (max-width: 1600px) and (min-width: 769px) {
-	.cardsContainer {
+	.adminContainer {
 		grid-template-columns: repeat(4, 1fr);
 	}
 }
 @media only screen and (max-width: 768px) and (min-width: 553px) {
-	.cardsContainer {
+	.adminContainer {
 		grid-template-columns: repeat(3, 1fr);
 	}
 }
 @media only screen and (max-width: 552px) and (min-width: 250px) {
-	.cardsContainer {
+	.adminContainer {
 		grid-template-columns: repeat(2, 1fr);
 	}
 }
 @media only screen and (max-width: 340px) {
-	.cardsContainer {
+	.adminContainer {
 		grid-template-columns: repeat(1, 1fr);
-	}
-}
-@media only screen and (max-width: 1099px) {
-	.allGamesBody {
-		padding: 0 0.5rem;
 	}
 }
