--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Users/Users/Users.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Users/Users/Users.module.css
@@ -1,13 +1,19 @@
-.adminContainer {
+.userContainer {
 	width: 100%;
 	height: 100%;
 	display: grid;
 	grid-template-columns: repeat(6, 1fr);
 	gap: 1rem;
 }
-.adminContainerHeader {
+
+.userContainerHeader {
 	font-weight: 400;
 	font-size: 2rem;
+	margin-bottom: 1rem;
+}
+
+.nameContainer {
+	font-weight: 600;
 }
 
 .paginationContainer {
@@ -18,34 +24,23 @@
 	margin-bottom: 3rem;
 }
 
-.IconContainer {
-	display: flex;
-	align-items: center;
-}
-
-.reportIcon {
-	width: 1rem;
-	height: 1rem;
-	margin-right: 0.5rem;
-}
-
 @media only screen and (max-width: 1600px) and (min-width: 769px) {
-	.adminContainer {
+	.userContainer {
 		grid-template-columns: repeat(4, 1fr);
 	}
 }
 @media only screen and (max-width: 768px) and (min-width: 553px) {
-	.adminContainer {
+	.userContainer {
 		grid-template-columns: repeat(3, 1fr);
 	}
 }
 @media only screen and (max-width: 552px) and (min-width: 250px) {
-	.adminContainer {
+	.userContainer {
 		grid-template-columns: repeat(2, 1fr);
 	}
 }
 @media only screen and (max-width: 340px) {
-	.adminContainer {
+	.userContainer {
 		grid-template-columns: repeat(1, 1fr);
 	}
 }
