--- a/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
@@ -1,13 +1,12 @@
 .dashboardBodyContainer {
 	overflow-y: scroll;
 	width: 100%;
+	padding: 3rem 0;
 }
 .dashboardBody {
 	width: 75vw;
 	max-width: 1600px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+
 	margin: 0 auto;
 }
 
