--- a/src/Shared/TypeableSelectionField/TypeableSelectionField.module.css
+++ b/src/Shared/TypeableSelectionField/TypeableSelectionField.module.css
@@ -2,7 +2,7 @@
 	position: relative;
 	width: 100%;
 }
-.button {
+.innerContainer {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(255, 255, 255, 0.05);
@@ -11,6 +11,8 @@
 	cursor: pointer;
 	transition: border 200ms cubic-bezier(0, 0, 0.2, 1);
 	font-size: 1rem;
+	display: flex;
+	flex-direction: column;
 }
 .label {
 	position: absolute;
@@ -29,16 +31,12 @@
 }
 
 .field {
-	width: 100%;
 	outline: none;
 	font-size: 1rem;
 	background: transparent;
 	padding: 25px 10px 15px 10px;
 	color: rgb(173, 173, 173);
 	border: none;
-	pointer-events: none;
-	padding-right: 30px;
-	text-overflow: ellipsis;
 	user-select: none;
 }
 
@@ -97,9 +95,6 @@
 	.label,
 	.field {
 		font-size: 12px;
-		white-space: nowrap;
-		overflow: hidden;
-		text-overflow: ellipsis;
 	}
 	.label {
 		width: calc(100% - 40px);
