--- a/src/Shared/SelectionField/SelectionFieldList/SelectionFieldList.module.css
+++ b/src/Shared/SelectionField/SelectionFieldList/SelectionFieldList.module.css
@@ -4,7 +4,7 @@
 .showAbove {
 	bottom: 100%;
 }
-.listContainer {
+.mainContainer {
 	position: absolute;
 	width: 100%;
 	border-radius: 4px;
@@ -17,6 +17,11 @@
 	transition:
 		opacity 200ms,
 		scale 200ms;
+}
+.listContainer {
+	width: 100%;
+	cursor: default;
+	list-style: none;
 }
 .fadeIn {
 	opacity: 1;
