--- a/src/Shared/SuggestionList/SuggestionListBody/SuggestionListBody.module.css
+++ b/src/Shared/SuggestionList/SuggestionListBody/SuggestionListBody.module.css
@@ -4,13 +4,12 @@
 .showAbove {
 	bottom: 100%;
 }
-.listContainer {
+.mainContainer {
 	position: absolute;
 	width: 100%;
 	border-radius: 4px;
 	background-color: rgb(37, 37, 37);
 	cursor: default;
-	list-style: none;
 	z-index: 1;
 	translate: 1%;
 	opacity: 0;
@@ -24,11 +23,11 @@
 }
 .listScrollContainer {
 	position: relative;
-	padding: 10px 10px 0px 10px;
+	padding: 0px 10px;
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 	overflow-y: auto;
-	max-height: 410px;
+	transition: height 200ms;
 }
 .listScrollContainer::-webkit-scrollbar {
 	display: none;
@@ -36,6 +35,7 @@
 
 .item {
 	position: relative;
+	height: 60px;
 }
 
 .item button {
@@ -55,16 +55,13 @@
 .item:hover button {
 	color: rgb(196, 196, 196);
 }
-.item button:hover::after {
-	background-color: rgb(196, 196, 196);
-}
 
 .item:not(:last-child)::after {
 	content: ' ';
 	position: absolute;
 	width: 100%;
 	height: 1px;
-	background-color: rgba(255, 255, 255, 0.3);
+	background-color: rgba(255, 255, 255, 0.1);
 	left: 0;
 	bottom: 0;
 	transition: background-color 200ms;
@@ -80,10 +77,26 @@
 }
 .noDataItem {
 	width: 100%;
-	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	color: rgb(140, 140, 140);
 	font-size: 1rem;
 	padding: 10px 0;
+}
+
+.listContainer {
+	width: 100%;
+	list-style: none;
+}
+
+.itemContainer {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+.itemContainer img {
+	width: 30px;
 }
 
 @media screen and (max-width: 768px) {
