--- a/src/App.css
+++ b/src/App.css
@@ -83,4 +83,29 @@ body {
 	.scroll-style::-webkit-scrollbar-thumb:active {
 		background-color: #363636;
 	}
+	.loading {
+		background-image: linear-gradient(
+			90deg,
+			rgba(255, 255, 255, 0) 0%,
+			rgba(255, 255, 255, 0) 10%,
+			rgba(255, 255, 255, 0.04) 20%,
+			rgba(255, 255, 255, 0.06) 30%,
+			rgba(255, 255, 255, 0.1) 50%,
+			rgba(255, 255, 255, 0.06) 70%,
+			rgba(255, 255, 255, 0.03) 80%,
+			rgba(255, 255, 255, 0) 90%,
+			rgba(255, 255, 255, 0) 100%
+		);
+		background-size: 1000% 100%;
+		background-position: 0 0;
+		animation: shimmer 30000ms linear infinite forwards 250ms;
+	}
+	@keyframes shimmer {
+		0% {
+			background-position: -1000% 0;
+		}
+		100% {
+			background-position: 1000% 0;
+		}
+	}
 }
