--- a/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/DashboardBody/DashboardBody.module.css
@@ -1,12 +1,11 @@
 .dashboardBodyContainer {
-	overflow-y: scroll;
+	overflow-y: auto;
 	width: 100%;
 	padding: 3rem 0;
 }
 .dashboardBody {
 	width: 75vw;
 	max-width: 1600px;
-
 	margin: 0 auto;
 }
 
