--- a/src/Shared/ScrollBar/ScrollBar.module.css
+++ b/src/Shared/ScrollBar/ScrollBar.module.css
@@ -1,12 +1,11 @@
 .scrollBarContainers {
 	height: 100%;
-	width: 10%;
-	max-width: 20px;
-	min-width: 8px;
+	width: 6px;
 	position: absolute;
 	user-select: none;
 	top: 0;
 	right: 0;
+	pointer-events: none;
 }
 .noHeight {
 	display: none;
