--- a/src/Shared/SuggestionList/SuggestionListBody/SuggestionListBody.module.css
+++ b/src/Shared/SuggestionList/SuggestionListBody/SuggestionListBody.module.css
@@ -14,18 +14,6 @@
 	bottom: 100%;
 }
 
-.listScrollContainer {
-	position: relative;
-	padding: 0px 10px;
-	-ms-overflow-style: none;
-	scrollbar-width: none;
-	overflow-y: auto;
-	transition: height 200ms;
-}
-.listScrollContainer::-webkit-scrollbar {
-	display: none;
-}
-
 .item {
 	position: relative;
 	height: 60px;
@@ -81,6 +69,8 @@
 .listContainer {
 	width: 100%;
 	list-style: none;
+	overflow-y: auto;
+	padding: 0 1rem;
 	opacity: 0;
 	transition:
 		opacity 200ms,
