--- a/src/Shared/Toasts/Components/ToastBody/ToastBody/ToastBody.module.css
+++ b/src/Shared/Toasts/Components/ToastBody/ToastBody/ToastBody.module.css
@@ -5,7 +5,8 @@
 	align-items: center;
 	color: #fff;
 	padding: 1rem 2rem 1rem 1rem;
-	background-color: #2f2f2f;
+	background-color: #2f2f2f88;
+	backdrop-filter: blur(10px);
 	border-radius: 4px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	margin-bottom: 16px;
