refector: scrollbar updated

--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotList/CardDotList.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotList/CardDotList.module.css
@@ -1,15 +1,27 @@
 .listContainer {
 	position: absolute;
 	list-style: none;
-	background-color: #252525;
 	padding: 5px 10px;
 	border-radius: 4px;
+	overflow: hidden;
 	z-index: 1;
 	opacity: 0;
 	scale: 0.7;
 	transition:
 		opacity 200ms,
 		scale 200ms;
+}
+
+.listContainer::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	background-color: #18181cd0;
+	backdrop-filter: blur(10px);
 }
 
 .bottom {
