--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -31,6 +31,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	padding-right: 6px;
+	user-select: none;
 }
 
 .drawer::-webkit-scrollbar {
