--- a/src/Shared/ScreenShadow/ScreenShadow.module.css
+++ b/src/Shared/ScreenShadow/ScreenShadow.module.css
@@ -1,20 +1,17 @@
 .shadowPage {
 	width: 100vw;
 	height: 100vh;
-	background-color: rgb(0, 0, 0);
+	background-color: rgba(0, 0, 0, 0);
+	backdrop-filter: blur(0);
 	position: fixed;
-	opacity: 0;
 	top: 0;
 	left: 0;
 }
 
 .shadowShow {
-	opacity: 0.6;
-	transition: opacity 200ms linear;
-}
-
-@media (pointer: coarse) {
-	.shadowPage {
-		width: 100vw;
-	}
+	background-color: rgba(0, 0, 0, 0.6);
+	backdrop-filter: blur(1px);
+	transition:
+		background-color 200ms linear,
+		backdrop-filter 200ms linear;
 }
