--- a/src/App.css
+++ b/src/App.css
@@ -88,24 +88,38 @@ body {
 	}
 }
 
+.scroll-style::-webkit-scrollbar {
+	width: 6px;
+	background-color: transparent;
+}
+
+.scroll-style::-webkit-scrollbar-thumb {
+	background-color: #47474700;
+}
+
+.scroll-style:hover::-webkit-scrollbar-thumb {
+	background-color: #5a5959;
+}
+
+.scroll-style::-webkit-scrollbar-thumb:active {
+	background-color: #363636;
+}
+
+.scroll-style {
+	scrollbar-color: #474747 transparent;
+}
+
 @media (hover: hover) and (pointer: fine) {
+	.scroll-style {
+		scrollbar-color: transparent transparent;
+		scrollbar-width: thin;
+		transition: scrollbar-color 200ms;
+	}
+
+	.scroll-style:hover {
+		scrollbar-color: #474747 transparent;
+	}
 	.hover-shadow:hover {
 		filter: drop-shadow(0px 0px 5px rgba(141, 141, 141, 0.616)) brightness(1.1);
-	}
-	.scroll-style::-webkit-scrollbar {
-		width: 6px;
-		background-color: transparent;
-	}
-
-	.scroll-style::-webkit-scrollbar-thumb {
-		background-color: #47474700;
-	}
-
-	.scroll-style:hover::-webkit-scrollbar-thumb {
-		background-color: #5a5959;
-	}
-
-	.scroll-style::-webkit-scrollbar-thumb:active {
-		background-color: #363636;
 	}
 }
