--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -62,7 +62,6 @@
 	border: none;
 	border-radius: 50%;
 	box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
-	z-index: 2;
 }
 .containerTransition .collapseButton {
 	transition: right 200ms linear;
@@ -136,13 +135,13 @@
 @media only screen and (max-width: 1099px) {
 	.drawerContainer {
 		position: absolute;
-		top: 72px;
+		top: 0;
 		left: 0;
 		max-width: 240px;
 		width: 100%;
 		height: calc(100vh - 72px);
 		background-color: #18181c;
-		z-index: 2;
+		z-index: 3;
 		transform-origin: 0 0;
 		translate: -100%;
 	}
