--- a/src/Shared/SearchField/SearchField.module.css
+++ b/src/Shared/SearchField/SearchField.module.css
@@ -5,7 +5,7 @@
 	border-radius: 1.5rem;
 	padding: 0px 10px;
 	max-width: 250px;
-	transition: background-color 300ms;
+	transition: background-color 200ms;
 	border: none;
 	height: 40px;
 	z-index: 1;
@@ -22,18 +22,17 @@
 	color: rgba(255, 255, 255, 0.5);
 	padding-left: 5px;
 	transition:
-		background-color 300ms,
-		color 300ms;
+		background-color 200ms,
+		color 200ms;
 }
 .searchField input::placeholder {
 	color: rgb(255, 255, 255, 0.5);
-	transition: color 300ms;
+	transition: color 200ms;
 }
 .searchField input {
 	outline: 0;
 }
 .show input {
-	outline: 0;
 	background-color: rgb(255, 255, 255);
 	color: #000;
 	border: none;
@@ -53,7 +52,7 @@
 	align-items: center;
 	aspect-ratio: 1/1;
 	fill: rgb(255, 255, 255, 0.5);
-	transition: fill 300ms;
+	transition: fill 200ms;
 }
 
 .suggestionList {
@@ -66,7 +65,11 @@
 		background-color: transparent;
 		max-width: none;
 		left: 0px;
-		transition: all 300ms;
+		transition:
+			background-color 200ms,
+			width 200ms,
+			border-radius 200ms,
+			padding 200ms;
 		z-index: 2;
 	}
 	.suggestionList {
@@ -76,7 +79,6 @@
 		padding: 0 10px;
 		width: 100%;
 		background-color: white;
-		position: absolute;
 		border-radius: 0;
 		z-index: 3;
 	}
