--- a/src/Shared/SelectionField/SelectionFieldList/SelectionFieldList.module.css
+++ b/src/Shared/SelectionField/SelectionFieldList/SelectionFieldList.module.css
@@ -12,17 +12,17 @@
 	backdrop-filter: blur(10px);
 	cursor: default;
 	z-index: 1;
-	scale: 0.9;
 	opacity: 0;
+	translate: -10%;
 	transition:
 		opacity 200ms,
-		scale 200ms;
+		translate 200ms;
 	user-select: none;
 }
 
 .fadeIn {
 	opacity: 1;
-	scale: 1;
+	translate: 0;
 }
 
 .listScrollContainer {
