refector: modal, toast, cardDot updated

--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
@@ -70,8 +70,8 @@
 	top: 50%;
 	transform: translateY(-50%);
 	transition:
-		top 200ms linear,
-		right 200ms linear;
+		top 200ms,
+		right 200ms;
 	transition-delay: 20ms;
 }
 
