--- a/src/Shared/Modal/ModalBody/ModalBody.module.css
+++ b/src/Shared/Modal/ModalBody/ModalBody.module.css
@@ -1,11 +1,10 @@
 .modal {
 	max-width: 100%;
-	max-height: 100%;
+	max-height: calc(100% - 1rem);
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	translate: -50% -50%;
-	background-color: #18181c;
 	z-index: 4;
 	display: flex;
 	border-radius: 0.5rem;
@@ -14,6 +13,18 @@
 	transition:
 		opacity 200ms,
 		scale 200ms;
+}
+.modal::before {
+	content: '';
+	position: fixed;
+	border-radius: 0.5rem;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #18181ccd;
+	backdrop-filter: blur(5px);
+	z-index: -1;
 }
 .modalScrollContainer {
 	width: 100%;
