--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,12 @@ body {
 	background-color: #121212;
 	color: rgb(222, 222, 222);
 }
+
 #root {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	height: 100vh;
+	position: relative;
 }
 :not(:root):fullscreen {
 	object-fit: contain;
@@ -37,13 +40,6 @@ body {
 	position: fixed;
 	inset: 0px;
 	background: black;
-}
-.margin-right-6px {
-	margin-right: 6px;
-}
-
-.overflow-y-hidden {
-	overflow-y: hidden;
 }
 
 .grabbing {
@@ -89,7 +85,7 @@ body {
 }
 
 .scroll-style::-webkit-scrollbar {
-	width: 6px;
+	width: 11px;
 	background-color: transparent;
 }
 
@@ -106,20 +102,19 @@ body {
 }
 
 .scroll-style {
-	scrollbar-color: #474747 transparent;
+	overflow-y: auto;
 }
 
 @media (hover: hover) and (pointer: fine) {
-	.scroll-style {
-		scrollbar-color: transparent transparent;
-		scrollbar-width: thin;
-		transition: scrollbar-color 200ms;
-	}
-
-	.scroll-style:hover {
-		scrollbar-color: #474747 transparent;
-	}
 	.hover-shadow:hover {
 		filter: drop-shadow(0px 0px 5px rgba(141, 141, 141, 0.616)) brightness(1.1);
 	}
+}
+
+.margin-right-6px {
+	margin-right: 11px;
+}
+
+.overflow-y-hidden {
+	overflow-y: hidden;
 }
