--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
@@ -1,16 +1,3 @@
-.optionButton {
-	background: transparent;
-	border: none;
-	text-align: left;
-	position: relative;
-	transition: padding 200ms;
-}
-
-.outerOption {
-	transition:
-		padding 200ms,
-		background-color 200ms;
-}
 .innerOption {
 	transition: background-color 200ms;
 }
@@ -23,10 +10,6 @@
 	font-size: 1rem;
 	color: rgb(196, 196, 196);
 	width: 100%;
-}
-
-.outerOptionCollapse {
-	padding-bottom: 1rem;
 }
 
 .iconContainer {
@@ -48,6 +31,10 @@
 	background-color: rgba(255, 255, 255, 0.1);
 }
 
+.outerOptionCollapse {
+	padding-bottom: 1rem;
+}
+
 .innerOptionsContainer {
 	width: calc(100% - 1rem);
 	list-style-type: none;
@@ -58,11 +45,7 @@
 		height 200ms;
 }
 
-.noPaddingLeft {
-	translate: 0rem;
-}
-
-.arrowButton {
+.arrow {
 	position: absolute;
 	width: 0.5rem;
 	height: 0.5rem;
@@ -75,23 +58,23 @@
 	transition-delay: 20ms;
 }
 
-.btnBottom {
+.arrowBottom {
 	right: calc(100% - 1.9rem);
 	top: calc(100% - 4px);
 	transition-delay: 0ms;
 }
 
+.noPaddingLeft {
+	translate: 0rem;
+}
+
 @media only screen and (max-width: 1099px) {
-	.btnBottom {
-		right: 1rem;
-		top: 50%;
-	}
 	.outerOptionCollapse {
 		padding: 0.6rem 0 0.6rem 0;
 	}
 }
+
 @media (hover: hover) and (pointer: fine) {
-	.optionButton,
 	.innerOption {
 		cursor: pointer;
 	}
