--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemCard/Components/CardNameContainer/CardNameContainer.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemCard/Components/CardNameContainer/CardNameContainer.module.css
@@ -1,6 +1,7 @@
 .cardNameContainer {
 	position: absolute;
 	height: 100%;
+	translate: -1px;
 	top: 0;
 	left: 100%;
 	z-index: 0;
@@ -9,7 +10,6 @@
 
 .cardName {
 	position: relative;
-	background-color: rgba(0, 0, 0, 0.2);
 	height: 100%;
 	display: flex;
 	text-align: center;
@@ -17,12 +17,24 @@
 	align-items: center;
 	translate: -100% 0px;
 	transition: translate 200ms;
-	border-radius: 0 5px 5px 0;
+	border-radius: 0 4px 4px 0;
 	font-size: 14px;
+	overflow: hidden;
+}
+
+.cardName::after {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.2);
+	backdrop-filter: blur(4px);
+	z-index: -1;
 }
 
 .cardNameText {
 	padding: 0 10px;
+	z-index: 1;
 }
 
 .fadeIn {
