--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerOptions/DrawerOptions.module.css
@@ -1,4 +1,5 @@
 .innerOption {
+	background-color: #ffffff00;
 	transition: background-color 200ms;
 }
 
@@ -14,7 +15,7 @@
 
 .outerOption:hover,
 .innerOption:hover {
-	background-color: rgba(255, 255, 255, 0.1);
+	background-color: #ffffff11;
 }
 
 .outerOptionCollapse {
