--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerFooter/DrawerFooter.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerFooter/DrawerFooter.module.css
@@ -1,21 +1,22 @@
 .footer {
-	margin-top: 2rem;
-	padding: 0 1rem;
 	width: 100%;
 	height: 81px;
 	flex-shrink: 0;
-	padding-bottom: 1rem;
-	display: flex;
-	flex-direction: column;
-	overflow: hidden;
 	position: sticky;
 	bottom: 0;
+	scale: 1 1;
+	transition: scale 200ms;
 }
 
 .footerHide {
-	opacity: 0;
-	height: 0px;
-	margin-top: 0;
+	scale: 0 1;
+}
+
+.footerInnerContainer {
+	width: 236px;
+	left: 1rem;
+	bottom: 1rem;
+	position: absolute;
 }
 
 .footerLinks {
