--- a/src/Shared/MenuTitle/MenuTitle.module.css
+++ b/src/Shared/MenuTitle/MenuTitle.module.css
@@ -8,7 +8,9 @@
 
 .hover {
 	background-color: #ffffff00;
-	transition: background-color 200ms;
+	transition:
+		background-color 200ms,
+		padding 200ms;
 }
 
 .hover:hover {
@@ -30,11 +32,14 @@
 	fill: rgb(196, 196, 196);
 }
 
+.paddingBot {
+	padding-bottom: 1rem;
+}
+
 .arrow {
 	position: absolute;
 	width: 0.5rem;
 	height: 0.5rem;
-	right: 0;
 	top: 50%;
 	transform: translateY(-50%);
 	transition:
@@ -43,8 +48,12 @@
 	transition-delay: 20ms;
 }
 
+.paddingRight {
+	right: 0.5rem;
+}
+
 .arrowBottom {
 	right: calc(100% - 1.9rem);
-	top: calc(100% - 4px);
+	top: calc(100% - 0.2rem);
 	transition-delay: 0ms;
 }
