--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -1,23 +1,21 @@
-.drawerContainer {
+.drawer {
 	width: 240px;
+	position: sticky;
 	background-color: #18181c;
 	flex-shrink: 0;
 	padding-top: 2rem;
-	position: relative;
-}
-.containerTransition {
-	transition: width 200ms;
-}
-.drawer {
-	width: 100%;
-	position: sticky;
-	top: 2rem;
+	top: 0rem;
 	left: 0px;
-	height: calc(100vh - 2rem);
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
+
+.containerTransition {
+	transition: width 200ms;
+}
+
 .containerCollapse {
 	width: 3.2rem;
 }
@@ -37,13 +35,14 @@
 
 .drawerOptions {
 	overflow: hidden;
+	height: calc(100vh - 11.5rem);
 }
 
 .collapseButton {
 	width: 2rem;
 	height: 2rem;
 	position: absolute;
-	top: -2rem;
+	top: 0;
 	cursor: pointer;
 	background-color: rgba(255, 255, 255, 0.2);
 	border: none;
