--- a/src/Shared/Tooltip/TooltipBody/TooltipBody.module.css
+++ b/src/Shared/Tooltip/TooltipBody/TooltipBody.module.css
@@ -4,7 +4,9 @@
 	opacity: 0;
 	left: 0;
 	top: 0;
-	transition: opacity 100ms;
+	transition:
+		opacity 200ms,
+		translate 200ms;
 	z-index: 1;
 	border-radius: 4px;
 	width: auto;
@@ -31,10 +33,6 @@
 	opacity: 0.8;
 	max-width: 250px;
 	width: max-content;
-}
-
-.fadeIn {
-	opacity: 1;
 }
 
 .top::after,
@@ -78,4 +76,25 @@
 	top: 100%;
 	left: 50%;
 	translate: -50% -5px;
+}
+
+.top {
+	translate: 0 10px;
+}
+
+.bottom {
+	translate: 0 -10px;
+}
+
+.left {
+	translate: 10px;
+}
+
+.right {
+	translate: -10px;
+}
+
+.fadeIn {
+	opacity: 1;
+	translate: 0px;
 }
