--- a/src/Shared/ScrollBar/ScrollBar/ScrollBar.module.css
+++ b/src/Shared/ScrollBar/ScrollBar/ScrollBar.module.css
@@ -1,8 +1,8 @@
-.scrollContainer::-webkit-scrollbar {
+.outerScrollContainer::-webkit-scrollbar {
 	display: none;
 }
 
-.scrollContainer {
+.outerScrollContainer {
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 	overflow: hidden auto;
@@ -10,5 +10,9 @@
 	perspective-origin: right top;
 	-webkit-overflow-scrolling: touch;
 	position: relative;
-	max-height: 100%;
+	height: 100%;
+}
+
+.scrollContainer {
+	transform-style: preserve-3d;
 }
