--- a/src/Pages/MainContent/MainContent/MainContent.module.css
+++ b/src/Pages/MainContent/MainContent/MainContent.module.css
@@ -9,6 +9,7 @@
 	flex-direction: column;
 	align-items: center;
 	margin: 0 auto;
+	padding: 0 1rem;
 }
 
 @media only screen and (max-width: 1023px) {
