--- a/src/Shared/ScrollBar/Thumb/Thumb.module.css
+++ b/src/Shared/ScrollBar/Thumb/Thumb.module.css
@@ -7,11 +7,17 @@
 	transform-origin: right top;
 	z-index: 10;
 	pointer-events: initial;
+	transition: opacity 300ms;
 }
-.thumbPath {
-	width: 8px;
-	height: 100%;
-	position: absolute;
-	right: 0;
-	top: 0;
+
+.show {
+	opacity: 1;
+	visibility: visible;
+}
+.hide {
+	opacity: 0;
+	visibility: hidden;
+	transition:
+		opacity 300ms,
+		visibility 0s 300ms;
 }
