--- a/src/Shared/ScrollBar/Components/Scroller/Components/Thumb/Thumb.module.css
+++ b/src/Shared/ScrollBar/Components/Scroller/Components/Thumb/Thumb.module.css
@@ -1,23 +1,1 @@
-.thumb {
-	width: 8px;
-	position: absolute;
-	right: 0;
-	top: 0;
-	background-color: #ffffff5f;
-	transform-origin: right top;
-	z-index: 5;
-	pointer-events: initial;
-	transition: opacity 300ms;
-}
-
-.show {
-	opacity: 1;
-	visibility: visible;
-}
-.hide {
-	opacity: 0;
-	visibility: hidden;
-	transition:
-		opacity 300ms,
-		visibility 0s 300ms;
-}
+.thumb {	width: 8px;	position: absolute;	right: 0;	top: 0;	background-color: #ffffff5f;	transform-origin: right top;	z-index: 5;	pointer-events: initial;	transition: opacity 300ms;}.show {	opacity: 1;	visibility: visible;}.hide {	opacity: 0;	visibility: hidden;	transition:		opacity 300ms,		visibility 0s 300ms;}
