--- a/src/Pages/MainContent/Pages/Discover/Components/EventGames/EventGames/EventGames.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/EventGames/EventGames/EventGames.module.css
@@ -12,6 +12,7 @@
 
 @media only screen and (max-width: 768px) {
 	.EventGamesContainer {
+		width: calc(100% - 1rem);
 		overflow: hidden;
 	}
 	.EventGames {
