--- a/src/Pages/MainContent/Pages/Discover/Components/FreeGames/FreeGames/FreeGames.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/FreeGames/FreeGames/FreeGames.module.css
@@ -61,6 +61,9 @@
 }
 
 @media only screen and (max-width: 768px) {
+	.freeGames {
+		width: calc(100% - 1rem);
+	}
 	.games4 {
 		grid-template-columns: repeat(2, 1fr);
 	}
