--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerInfoItems/DiscoverBannerInfoItem/DiscoverBannerInfoItem.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerInfoItems/DiscoverBannerInfoItem/DiscoverBannerInfoItem.module.css
@@ -1,10 +1,8 @@
 .itemInfo {
 	visibility: hidden;
 	position: absolute;
-	width: 100%;
-	top: 50%;
-	translate: 0 -50%;
-	left: 2%;
+	width: fit-content;
+	height: fit-content;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -42,7 +40,7 @@
 	opacity: 0;
 	z-index: 1;
 	visibility: visible;
-	animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 300ms 1 normal forwards running fadeIn;
+	animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 400ms 1 normal forwards running fadeIn;
 }
 
 #bannerFadeOut {
@@ -90,16 +88,18 @@
 	}
 
 	.itemInfo {
-		bottom: 10%;
-		width: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		width: 100%;
 	}
 
 	.priceContainer {
 		font-size: 12px;
+		width: fit-content;
+		display: flex;
+		justify-content: center;
 	}
 
 	@keyframes fadeout {
@@ -121,7 +121,4 @@
 			opacity: 1;
 		}
 	}
-}
-
-@media (min-width: 2134px) {
 }
