--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerInfoItems/DiscoverBannerInfoItems/DiscoverBannerInfoItems.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerInfoItems/DiscoverBannerInfoItems/DiscoverBannerInfoItems.module.css
@@ -2,9 +2,25 @@
 	z-index: 1;
 	height: 100%;
 	position: absolute;
-	top: 100%;
+	bottom: 0;
+	left: 1rem;
 }
+
 .itemsContainer {
-	position: absolute;
-	translate: 0 -80px;
+	position: relative;
+	height: 100%;
+	display: flex;
+	align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+	.infoItems {
+		width: 80%;
+		user-select: none;
+		left: 10%;
+	}
+	.itemsContainer {
+		align-items: end;
+		justify-content: center;
+	}
 }
