--- a/src/Shared/FirstNavbar/Components/FirstNavLinks/FirstNavLinks.module.css
+++ b/src/Shared/FirstNavbar/Components/FirstNavLinks/FirstNavLinks.module.css
@@ -1,75 +1,75 @@
-.FirstNavLinks {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
+.firstNavLinks {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	list-style: none;
 }
-.FirstNavLinks a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-  color: rgba(255, 255, 255, 0.5);
-  text-decoration: none;
-  transition: color 200ms;
-}
-
-#active {
-  cursor: default;
+.firstNavLinks a {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	width: 100%;
+	color: rgba(255, 255, 255, 0.5);
+	text-decoration: none;
+	transition: color 200ms;
 }
 
-#active a {
-  color: #fff;
-  pointer-events: none;
+.option {
+	cursor: pointer;
+	height: 100%;
+	flex-shrink: 0;
+	padding: 0 1.5rem;
+	white-space: nowrap;
+	position: relative;
+	overflow: hidden;
 }
-#active::after {
-  bottom: 0px;
-  background-color: rgba(255, 255, 255);
-}
-.navOption {
-  cursor: pointer;
-  height: 100%;
-  flex-shrink: 0;
-  padding: 0 1.5rem;
-  white-space: nowrap;
-  position: relative;
-  overflow: hidden;
-}
-.navOption a {
-  transition: color 200ms;
+.option a {
+	transition: color 200ms;
 }
 
-.navOption::after {
-  content: '';
-  background-color: rgba(255, 255, 255, 0.8);
-  width: 100%;
-  height: 5px;
-  left: 0;
-  bottom: -5px;
-  transition: bottom 200ms;
-  position: absolute;
+.option::after {
+	content: '';
+	background-color: rgba(255, 255, 255, 0.8);
+	width: 100%;
+	height: 5px;
+	left: 0;
+	bottom: -5px;
+	transition: bottom 200ms;
+	position: absolute;
 }
-.navOption:hover a {
-  color: rgba(255, 255, 255, 0.8);
+.option:hover a {
+	color: rgba(255, 255, 255, 0.8);
 }
-.navOption:hover::after {
-  bottom: 0px;
-  background-color: rgb(255, 255, 255);
+.option:hover::after {
+	bottom: 0px;
+	background-color: rgb(255, 255, 255);
+}
+.active {
+	cursor: default;
+	pointer-events: none;
+}
+.active a {
+	color: #fff;
+}
+
+.active::after {
+	bottom: 0px;
+	background-color: rgba(255, 255, 255);
 }
 @media only screen and (max-width: 768px) {
-  .FirstNavLinks {
-    display: flex;
-    z-index: 1;
-    flex-direction: column;
-    flex-shrink: 1;
-  }
-  .navOption::after {
-    content: none;
-  }
-  .navOption {
-    height: auto;
-    padding: 0;
-    margin-top: 1rem;
-  }
+	.firstNavLinks {
+		display: flex;
+		z-index: 1;
+		flex-direction: column;
+		flex-shrink: 1;
+	}
+	.option::after {
+		content: none;
+	}
+	.option {
+		height: auto;
+		padding: 0;
+		margin-top: 1rem;
+	}
 }
