--- a/src/Shared/SecondNavbar/Components/SecondNavLeftLinks/SecondNavLeftLinks.module.css
+++ b/src/Shared/SecondNavbar/Components/SecondNavLeftLinks/SecondNavLeftLinks.module.css
@@ -1,16 +1,16 @@
 .middleLinks {
-  display: flex;
-  align-items: center;
-  width: 100%;
+	display: flex;
+	align-items: center;
+	flex-grow: 1;
 }
 @media only screen and (max-width: 768px) {
-  .middleLinks {
-    position: absolute;
-    height: 100%;
-    left: 0;
-    top: 50%;
-    translate: 0 -50%;
-    width: 100%;
-    z-index: 1;
-  }
+	.middleLinks {
+		position: absolute;
+		height: 100%;
+		left: 0;
+		top: 50%;
+		translate: 0 -50%;
+		width: 100%;
+		z-index: 1;
+	}
 }
