--- a/src/Shared/SelectionField/SelectionFieldList/SelectionFieldList.module.css
+++ b/src/Shared/SelectionField/SelectionFieldList/SelectionFieldList.module.css
@@ -14,11 +14,18 @@
 	cursor: default;
 	z-index: 1;
 	opacity: 0;
-	translate: -10%;
 	transition:
 		opacity 200ms,
 		translate 200ms;
 	user-select: none;
+}
+
+.left {
+	translate: -10%;
+}
+
+.right {
+	translate: 10%;
 }
 
 .fadeIn {
