--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerFooter/DrawerFooter.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerFooter/DrawerFooter.module.css
@@ -1,22 +1,24 @@
 .footer {
-	width: fit-content;
-	height: fit-content;
+	width: 15rem;
+	height: 100%;
 	position: fixed;
 	scale: 1 1;
 	overflow: hidden;
-	transform-origin: left;
-	max-width: 13rem;
-	left: 1rem;
-	bottom: 0.5rem;
+	padding: 1rem;
+	left: 0;
+	bottom: 0;
 	z-index: 3;
+	pointer-events: none;
+	background-color: #18181c;
+	z-index: -1;
 }
 
-.footerTransition {
-	transition: scale 200ms;
-}
-
-.footerHide {
-	scale: 0 1;
+.footerContainer {
+	transform-origin: left;
+	position: absolute;
+	width: 13rem;
+	height: fit-content;
+	bottom: 1rem;
 }
 
 .footerLinks {
@@ -26,6 +28,21 @@
 	display: flex;
 	flex-wrap: wrap;
 	column-gap: 1rem;
+}
+.footerTransition {
+	transition: width 200ms;
+}
+
+.footerTransitionContent {
+	transition: scale 200ms;
+}
+
+.footerHide {
+	width: 3.2rem;
+}
+
+.footerContainerHide {
+	scale: 0 1;
 }
 .footerLink {
 	text-decoration: none;
@@ -48,4 +65,19 @@
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	font-weight: 600;
+}
+
+@media only screen and (max-width: 1099px) {
+	.footer {
+		z-index: 2;
+		translate: 0;
+	}
+	.footerHide {
+		width: 15rem;
+		translate: -100%;
+	}
+
+	.footerTransition {
+		transition: translate 200ms;
+	}
 }
