--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -1,14 +1,11 @@
 .drawer {
 	width: 15rem;
 	position: sticky;
-	background-color: #18181c;
+	background-color: transparent;
 	flex-shrink: 0;
 	padding-top: 2rem;
 	top: 0rem;
 	left: 0px;
-	height: calc(100vh - 4.5rem);
-	/* box shadow for coverup the height */
-	box-shadow: 0 4.5rem 0 #18181c;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -120,10 +117,6 @@
 	.drawerOptions {
 		max-width: 100vw;
 		width: 15rem;
-		height: calc(100vh - 4.5rem);
-		/* box shadow for coverup the height */
-		box-shadow: 0 4.5rem 0 #18181c;
-		background-color: #18181c;
 		position: absolute;
 		translate: -100%;
 		padding-top: 2rem;
