--- a/src/Shared/MenuTitle/MenuTitle.module.css
+++ b/src/Shared/MenuTitle/MenuTitle.module.css
@@ -34,7 +34,7 @@
 	position: absolute;
 	width: 0.5rem;
 	height: 0.5rem;
-	right: 1rem;
+	right: 0;
 	top: 50%;
 	transform: translateY(-50%);
 	transition:
