--- a/src/Shared/Image/Image.module.css
+++ b/src/Shared/Image/Image.module.css
@@ -10,16 +10,11 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(
-		90deg,
-		rgba(255, 255, 255, 0.1) 0%,
-		rgba(255, 255, 255, 0.05) 50%,
-		rgba(255, 255, 255, 0.1) 100%
-	);
+	background: linear-gradient(90deg, rgb(33, 33, 33) 0%, rgb(22, 22, 22) 50%, rgb(33, 33, 33) 100%);
 	background-size: 400% 100%;
 	animation-name: placeHolderAnimation;
 	animation-duration: 6s;
-	animation-timing-function: ease;
+	animation-timing-function: linear;
 	animation-iteration-count: infinite;
 	top: 0;
 	left: 0;
