--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotBody/CardDotBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotBody/CardDotBody.module.css
@@ -4,6 +4,7 @@
 	top: 0.5rem;
 	width: 2.5rem;
 	height: 2.5rem;
+	border-radius: 100%;
 }
 
 .nameContainer {
@@ -13,7 +14,9 @@
 .btnDot {
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgb(0, 0, 0, 0.5);
+	backdrop-filter: blur(5px);
+	outline: 2px solid rgb(207, 207, 207);
 	border-radius: 50%;
 	padding: 5px;
 	border: none;
@@ -26,7 +29,7 @@
 }
 
 .btnDot:hover {
-	background-color: rgba(0, 0, 0, 0.6);
+	background-color: rgb(29, 29, 29);
 }
 
 .btnDot:active {
