--- a/src/Shared/SecondNavbar/SecondNavBar/SecondNavbar.module.css
+++ b/src/Shared/SecondNavbar/SecondNavBar/SecondNavbar.module.css
@@ -3,6 +3,9 @@
 	height: 72px;
 	position: sticky;
 	position: -webkit-sticky;
+	position: -moz-sticky;
+	position: -ms-sticky;
+	position: -o-sticky;
 	left: 0;
 	top: 0;
 	padding: 1rem 0;
@@ -26,16 +29,16 @@
 }
 
 @media (max-width: 1023px) and (min-width: 769px) {
-	.SecondNavbar {
+	.secondNavbar {
 		width: 97vw;
 	}
 }
 
 @media only screen and (max-width: 768px) {
-	.SecondNavContainer {
+	.secondNavContainer {
 		padding: 0.5rem 0;
 	}
-	.SecondNavbar {
+	.secondNavbar {
 		width: 100%;
 		padding: 0;
 		height: 60px;
