refector: root level scrollbar revert, fix: first navbar overflow fixed, bug: gamesCards small screen with mouse overflow Issue

--- a/src/Shared/ScrollBar/Components/Scroller/Components/Thumb/Thumb.module.css
+++ b/src/Shared/ScrollBar/Components/Scroller/Components/Thumb/Thumb.module.css
@@ -7,9 +7,7 @@
 	transform-origin: right top;
 	z-index: 5;
 	pointer-events: initial;
-	transition:
-		opacity 300ms,
-		height 200ms;
+	transition: opacity 300ms;
 }
 .show {
 	opacity: 1;
