--- a/src/Pages/MainContent/Pages/Discover/Components/EventGames/Components/EventGamesGamesColumn/EventGamesGamesColumn.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/EventGames/Components/EventGamesGamesColumn/EventGamesGamesColumn.module.css
@@ -1,60 +1,65 @@
-.GameColumn {
-  width: calc(100% / 3);
-  transition: opacity 200ms;
-  position: relative;
+.gameColumn {
+	width: calc(100% / 3);
+	transition: opacity 200ms;
+	position: relative;
 }
 
 .column {
-  list-style: none;
-  position: relative;
+	list-style: none;
+	position: relative;
 }
 .bar:after {
-  content: '';
-  position: absolute;
-  background-color: rgba(255, 255, 255, 0.3);
-  height: 100%;
-  width: 1px;
-  top: 0;
-  right: -0.5rem;
+	content: '';
+	position: absolute;
+	background-color: rgba(255, 255, 255, 0.3);
+	height: 100%;
+	width: 1px;
+	top: 0;
+	right: -0.5rem;
 }
 .heading {
-  display: flex;
-  align-items: center;
-  padding: 5px;
-  margin-bottom: 1rem;
+	display: flex;
+	align-items: center;
+	padding: 5px;
+	margin-bottom: 1rem;
 }
 .heading button {
-  position: relative;
-  border: 1px solid rgba(156, 156, 156, 0.6);
-  background-color: black;
-  color: white;
-  border-radius: 5px;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  transition: box-shadow 300ms;
-  margin-left: auto;
+	position: relative;
+	border: 1px solid rgba(156, 156, 156, 0.6);
+	background-color: black;
+	color: white;
+	border-radius: 5px;
+	padding: 0.5rem 1rem;
+	cursor: pointer;
+	transition: box-shadow 300ms;
+	margin-left: auto;
 }
 .heading button:hover {
-  box-shadow: 0 0 10px 0px grey;
+	box-shadow: 0 0 10px 0px grey;
 }
 .heading h2 {
-  font-size: 1rem;
-  font-weight: 400;
+	font-size: 1rem;
+	font-weight: 400;
+}
+
+.text {
+	position: sticky;
+	top: 0;
 }
 @media only screen and (max-width: 768px) {
-  .GameColumn {
-    width: 100%;
-  }
-  .Opacity0 {
-    opacity: 0;
-  }
-  .GameColumn {
-    flex-shrink: 0;
-  }
-  .heading button {
-    margin-right: 3px;
-  }
-  .bar:after {
-    display: none;
-  }
+	.gameColumn {
+		width: 100%;
+	}
+	.opacity0 {
+		opacity: 0;
+	}
+	.gameColumn {
+		flex-shrink: 0;
+	}
+	.heading button {
+		margin-right: 3px;
+	}
+	.bar:after {
+		display: none;
+	}
 }
